--- a/Admin Dashboard Panel/report.html
+++ b/Admin Dashboard Panel/report.html
@@ -18,7 +18,7 @@
     <nav>
         <div class="logo-name">
             <div class="logo-image">
-                <!-- <img src="images/logo.png" alt=""> -->
+                <img src="images/logo.png" alt="" width="76px" height= "80px">
             </div>
 
             <span class="logo_name">EcoDrive</span>
@@ -66,7 +66,7 @@
             </ul>
             
             <ul class="logout-mode">
-                <li><a href="#">
+                <li><a href="logout-sam.html">
                     <i class="uil uil-signout"></i>
                     <span class="link-name">Logout</span>
                 </a></li>
