--- a/Admin Dashboard Panel/vehicle.html
+++ b/Admin Dashboard Panel/vehicle.html
@@ -101,7 +101,7 @@
             <div class="overview">
                 <div class="title">
                     <i class="uil uil-files-landscapes"></i>
-                    <span class="text">Vechicle's</span>
+                    <span class="text">Vehicle's</span>
                 </div>
 
                 <div class="boxes">
@@ -114,7 +114,7 @@
                         <i><svg xmlns="http://www.w3.org/2000/svg" width="72" height="72" viewBox="0 0 72 72"><path fill="#FFF" d="M51.065 43.916V10.979H18.937v49.76h16.062"/><circle cx="43.167" cy="52.167" r="11.129" fill="#D0CFCE"/><g fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" stroke-width="2"><path d="M51.065 43.916V10.979H18.937v49.76h16.062M23.667 16.02H32m-8.333 8.48h22m-22 3.771h22m-22 3.77h22m-22 3.771h22m-22 3.771h22M36.38 43.35H23.67m9.58 3.77h-9.58m8.45 3.77h-8.45"/><circle cx="43.167" cy="52.167" r="11.129"/><path d="m51.065 60.739l5.467 5.467M33.439 48.453h13.436m-14.703 5.386h14.703"/></g></svg></i>
                         <span class="text">Booking : 3</span>
                         <span class="text">Notification : 0</span>
-                        <span class="text">Fuel : 60%</span>
+                        <span class="text">Fuel : 80%</span>
                     </div>
                     <!-- <div class="box box3">
                         <i class="uil uil-thumbs-up"></i>
