--- a/Admin Dashboard Panel/fuel.html
+++ b/Admin Dashboard Panel/fuel.html
@@ -18,7 +18,7 @@
     <nav>
         <div class="logo-name">
             <div class="logo-image">
-                <img src="images/logo.png" alt="" width="76px" height= "80px">
+                <img src="images/logo.png" alt="logo" width="76px" height= "80px">
             </div>
 
             <span class="logo_name">EcoDrive</span>
