--- a/Admin Dashboard Panel/index.html
+++ b/Admin Dashboard Panel/index.html
@@ -19,7 +19,7 @@
         <div class="logo-name">
             <div class="logo-image">
             </div>
-            <img src="images/logo.png" alt="" width="76px" height= "80px">
+            <img src="images/logo.png" alt="logo" width="76px" height= "80px">
             <span class="logo_name">EcoDrive Plus</span>
         </div>
 
